# identify

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  Makefile  README.md  azure-pipelines.yml  build.rs  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
identify/: cli.py  emacs_tags.py  extensions.py  identify.py  interpreters.py
src/: identify.rs  main.rs  tags.rs
tests/: cli_test.py  extensions_test.py  identify_test.py
