[metadata]
name = identify
version = 2.5.35
description = File identification library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/identify
author = Chris Kuehl
author_email = ckuehl@ocf.berkeley.edu
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    identify-cli=identify.cli:main

[options.extras_require]
license =
    ukkonen

[options.package_data]
identify =
    py.typed

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
